--- a/camelliamix25dv2.ipynb
+++ b/camelliamix25dv2.ipynb
@@ -21,13 +21,22 @@
         "!git clone https://github.com/nolanaatama/sd-webui-tunnels /content/sd-webui/extensions/sd-webui-tunnels\n",
         "!git clone https://github.com/Mikubill/sd-webui-controlnet /content/sd-webui/extensions/sd-webui-controlnet\n",
         "!git clone https://github.com/hnmr293/posex /content/sd-webui/extensions/posex\n",
+        "!git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111 /content/sd-webui/extensions/ultimate-upscale-for-automatic1111\n",
+        "!git clone https://github.com/Bing-su/dddetailer /content/sd-webui/extensions/dddetailer\n",
+        "!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git /content/sd-webui/extensions/a1111-sd-webui-locon.git\n",
+        "!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git /content/sd-webui/extensions/stable-diffusion-webui-two-shot.git\n",
+        "!git clone https://github.com/hnmr293/sd-webui-cutoff /content/sd-webui/extensions/sd-webui-cutoff\n",
+        "!git clone https://github.com/camenduru/sd-civitai-browser /content/sd-webui/extensions/sd-civitai-browser\n",
         "!curl -Lo /content/sd-webui/extensions/sd-webui-images-browser.zip https://huggingface.co/nolanaatama/webui/resolve/main/sd-webui-images-browser.zip\n",
         "%cd /content/sd-webui/extensions\n",
         "!unzip /content/sd-webui/extensions/sd-webui-images-browser.zip\n",
         "%cd /content\n",
         "# Model Code\n",
-        "!curl -Lo /content/sd-webui/models/Stable-diffusion/camelliamix25dv2.safetensors https://huggingface.co/nolanaatama/cmllmx25dv2/resolve/main/cmllmx25dv2.safetensors\n",
-        "!curl -Lo /content/sd-webui/models/Stable-diffusion/camelliamix25dv2.vae.pt https://huggingface.co/nolanaatama/cmllmx25dv2/resolve/main/cmllmx25dv2.vae.pt\n",
+        "!curl -Lo /content/sd-webui/models/Stable-diffusion/CamelliaMIx_NSFW_V1.1.safetensors https://huggingface.co/Echiki/Dyrotthmix/resolve/main/CamelliaMIx_NSFW_V1.1.safetensors\n",
+        "!curl -Lo /content/sd-webui/models/Stable-diffusion/CamelliaMix_V2.safetensors https://huggingface.co/Echiki/Dyrotthmix/resolve/main/CamelliaMix_V2.safetensors\n",
+        "!curl -Lo /content/sd-webui/models/Stable-diffusion/CamelliaMix_2.5D_V2.safetensors https://huggingface.co/Echiki/Dyrotthmix/resolve/main/CamelliaMix_2.5D_V2.safetensors\n",
+        "!curl -Lo /content/sd-webui/models/Stable-diffusion/ZemiHR.safetensors https://huggingface.co/Echiki/ixiaHR/resolve/main/ZemiHR.safetensors\n",
+        "!curl -Lo /content/sd-webui/models/Stable-diffusion/Dyrotthmix.vae.pt https://huggingface.co/Echiki/Dyrotthmix/resolve/main/Dyrotthmix.vae.pt\n",
         "import shutil\n",
         "shutil.rmtree('/content/sd-webui/embeddings')\n",
         "shutil.rmtree('/content/sd-webui/extensions/sd-webui-controlnet/models')\n",
